kubernetes/apps/ai/kelos/base/static.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: kelos-session-ui
spec:
    hostnames:
        - kelos.goyangi.io
    parentRefs:
        - name: envoy-internal
          namespace: network
    rules:
        - backendRefs:
              - name: kelos-session-server
                port: 80
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
    name: kelos-session-ui
spec:
    oidc:
        clientID: kelos-session-ui
        clientSecret:
            name: kelos-session-ui-oidc
        provider:
            issuer: https://id.goyangi.io/
        redirectURL: https://kelos.goyangi.io/oauth2/callback
        refreshToken: true
        scopes:
            - openid
            - profile
            - email
        logoutPath: /logout
    targetRefs:
        - group: gateway.networking.k8s.io
          kind: HTTPRoute
          name: kelos-session-ui
